Don't fixate layout on narrow screens

--- a/src/scss/section/_base.scss
+++ b/src/scss/section/_base.scss
@@ -1,3 +1,4 @@
 .section-nav {
     background-color: black;
+    width: 100%;
 }
